@@ -1,3 +1,7 @@
+2012-12-10
+* add another variant of squashfs where only the identifier was changed. Code
+is a bit inefficient and could use some cleanups.
+
 2012-12-08
 * add variant of generatelist.py that reads a directory full of SRPMs,
 extracts the source code from the SRPMs, copies them to a directory and
